--- a/html/course-list.html
+++ b/html/course-list.html
@@ -66,10 +66,10 @@
 			<div class="row">
 					<form class="tg-formtrip">
 						<fieldset>
-							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-								<div class="form-group ">
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
+								<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12  ">
 									<div class="tg-select " >
-										<select class="selectpicker" data-live-search="true" data-width="100%" id="location"  >
+										<select class="selectpicker" data-live-search="true" id="location"  >
 											<option>Location</option>
 											<option data-tokens="Woodlands" value="woodlands">Woodlands</option>
 											<option data-tokens="Yishun" value="yishun" >Yishun</option>
@@ -81,10 +81,10 @@
 								</div>
 							</div>
 
-							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
 								<div class="form-group ">
 									<div class="tg-select">
-										<select class="selectpicker" data-live-search="true" data-width="100%" id="rating" col-sm-6>
+										<select class="selectpicker" data-live-search="true" id="rating">
 											<option>Rating</option>
 											<option data-tokens="5 Stars" >5 Stars</option>
 											<option data-tokens="4 Stars" >4 Stars</option>
@@ -96,10 +96,10 @@
 								</div>
 							</div>
 
-							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
 								<div class="form-group">
 									<div class="tg-select">
-										<select class="selectpicker" data-live-search="true" data-width="100%" id="language" col-sm-6>
+										<select class="selectpicker" data-live-search="true" id="language" >
 											<option>Language</option>
 											<option data-tokens="English" id="english">English</option>
 											<option data-tokens="Malay" id="malay">Malay</option>
@@ -110,10 +110,10 @@
 								</div>
 							</div>
 
-							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
 								<div class="form-group">
 									<div class="tg-select">
-										<select class="selectpicker" data-live-search="true" data-width="100%" id="budget" col-sm-6>
+										<select class="selectpicker" data-live-search="true" id="budget" >
 											<option>Budget</option>
 											<option data-tokens="$50" id="50">$50</option>
 											<option data-tokens="$70" id="70">$70</option>
