--- a/public/html/telegramhelp.html
+++ b/public/html/telegramhelp.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    
 </head>
 <body>
     
@@ -55,6 +56,8 @@
     <div id="footer">
 
     </div>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <script>
     $(function(){
         $("#nav-placeholder").load("navbar.html");
