--- a/public/html/navbar.html
+++ b/public/html/navbar.html
@@ -81,6 +81,9 @@
       }
       
   </script>
+
+<script src="../vendor/bootstrap/js/popper.min.js"></script>
+<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
   </body>
 
 </html>
