--- a/public/html/course-list.html
+++ b/public/html/course-list.html
@@ -64,74 +64,74 @@
 			
 		
 			<div class="row">
-				<form class="tg-formtrip">
-					<fieldset>
-						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 pl-0 pr-0" style="padding: 0 !important;">
-							<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12  ">
-								<div class="tg-select " >
-									<select class="selectpicker" data-live-search="true" id="location"  >
-										<option>Location</option>
-										<option data-tokens="Woodlands" value="woodlands">Woodlands</option>
-										<option data-tokens="Yishun" value="yishun" >Yishun</option>
-										<option data-tokens="Clementi" value="clementi" >Clementi</option>
-										<option data-tokens="Yio Chu Kang" id="yio chu kang">Yio Chu Kang</option>
-										<option data-tokens="Eunos" id="eunos">Eunos</option>
-									</select>
+					<form class="tg-formtrip">
+						<fieldset>
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
+								<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12  ">
+									<div class="tg-select " >
+										<select class="selectpicker" data-live-search="true" id="location"  >
+											<option>Location</option>
+											<option data-tokens="Woodlands" value="woodlands">Woodlands</option>
+											<option data-tokens="Yishun" value="yishun" >Yishun</option>
+											<option data-tokens="Clementi" value="clementi" >Clementi</option>
+											<option data-tokens="Yio Chu Kang" id="yio chu kang">Yio Chu Kang</option>
+											<option data-tokens="Eunos" id="eunos">Eunos</option>
+										</select>
+									</div>
 								</div>
 							</div>
-						</div>
 
-						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 pl-0 pr-0">
-							<div class="form-group ">
-								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" id="rating">
-										<option>Rating</option>
-										<option data-tokens="5 Stars" >5 Stars</option>
-										<option data-tokens="4 Stars" >4 Stars</option>
-										<option data-tokens="3 Stars" >3 Stars</option>
-										<option data-tokens="2 Stars" >2 Stars</option>
-										<option data-tokens="1 Stars" >1 Stars</option>
-									</select>
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
+								<div class="form-group ">
+									<div class="tg-select">
+										<select class="selectpicker" data-live-search="true" id="rating">
+											<option>Rating</option>
+											<option data-tokens="5 Stars" >5 Stars</option>
+											<option data-tokens="4 Stars" >4 Stars</option>
+											<option data-tokens="3 Stars" >3 Stars</option>
+											<option data-tokens="2 Stars" >2 Stars</option>
+											<option data-tokens="1 Stars" >1 Stars</option>
+										</select>
+									</div>
 								</div>
 							</div>
-						</div>
 
-						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 pl-0 pr-0">
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
+								<div class="form-group">
+									<div class="tg-select">
+										<select class="selectpicker" data-live-search="true" id="language" >
+											<option>Language</option>
+											<option data-tokens="English" id="english">English</option>
+											<option data-tokens="Malay" id="malay">Malay</option>
+											<option data-tokens="Tamil" id="tamil">Tamil</option>
+											<option data-tokens="Chinese" id="chinese">Chinese</option>
+										</select>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
+								<div class="form-group">
+									<div class="tg-select">
+										<select class="selectpicker" data-live-search="true" id="budget" >
+											<option>Budget</option>
+											<option data-tokens="$50" id="50">$50</option>
+											<option data-tokens="$70" id="70">$70</option>
+											<option data-tokens="$90" id="90">$90</option>
+											<option data-tokens="$100" id="100">$100</option>
+										</select>
+									</div>
+								</div>
+							</div>
+
+				
 							<div class="form-group">
-								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" id="language" >
-										<option>Language</option>
-										<option data-tokens="English" id="english">English</option>
-										<option data-tokens="Malay" id="malay">Malay</option>
-										<option data-tokens="Tamil" id="tamil">Tamil</option>
-										<option data-tokens="Chinese" id="chinese">Chinese</option>
-									</select>
-								</div>
+								<button class="tg-btn" type="submit" id="submit"  ><span style="color: white;">Filter</span></button>
 							</div>
-						</div>
-
-						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 pl-0 pr-0">
-							<div class="form-group">
-								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" id="budget" >
-										<option>Budget</option>
-										<option data-tokens="$50" id="50">$50</option>
-										<option data-tokens="$70" id="70">$70</option>
-										<option data-tokens="$90" id="90">$90</option>
-										<option data-tokens="$100" id="100">$100</option>
-									</select>
-								</div>
-							</div>
-						</div>
-
-			
-						<div class="form-group">
-							<button class="tg-btn" type="submit" id="submit"  ><span style="color: white;">Filter</span></button>
-						</div>
-					</fieldset>
-				</form>
+						</fieldset>
+					</form>
+				</div>
 			</div>
-		</div>
 		</div>
 		<div class="container" id="top">
 			<!--  -->
@@ -194,8 +194,8 @@
 	<script src="../vendor/jquery/jquery-3.2.1.min.js"></script>
 
 	<script src="../vendor/animsition/dist/js/animsition.min.js"></script>
-	<script src="../vendor/bootstrap/js/popper.min.js"></script>
-	<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+	<!-- <script src="../vendor/bootstrap/js/popper.min.js"></script>
+	<script src="../vendor/bootstrap/js/bootstrap.min.js"></script> -->
 	<script src="../js/main.js"></script>
 	<div id="nav-placeholder">
 
@@ -214,7 +214,7 @@
 
 	<script src="../filterbar/js/vendor/jquery-library.js"></script>
 	<script src="../filterbar/js/vendor/bootstrap.min.js"></script>
-
+	<script src="https://maps.google.com/maps/api/js?key=AIzaSyCR-KEWAVCn52mSdeVeTqZjtqbmVJyfSus&language=en"></script>
 	<script src="../filterbar/js/bootstrap-select.min.js"></script>
 	<script src="../filterbar/js/jquery-scrolltofixed.js"></script>
 	<script src="../filterbar/js/owl.carousel.min.js"></script>
