no more console.log

--- a/public/html/booking.html
+++ b/public/html/booking.html
@@ -45,7 +45,7 @@
             </div>
     </section>
     <div class="container-fluid" >
-        <div class="row">
+        <div class="row pb-3">
             <div id="calendar"></div>
         </div>
     </div>
