--- a/html/footer.html
+++ b/html/footer.html
@@ -57,7 +57,7 @@
  
 
 
-   <footer class="bg4 p-t-25" style="padding:0 !important">
+   <footer class="bg4 p-t-25" style="padding:0;margin-top:12px !important">
 		<div class="container p-b-60">
 			<div class="row">
 				<div class=" col-sm-12 col-lg-3 p-t-30">
