--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -85,7 +85,7 @@
 	                                <input type="email" name="email_address" id="email_address" class="form-control" required>
 	                            </div>
 								<div class="form-group">
-	                                <label for="dob">Date of Birth (DD/MM/YY)</label>
+	                                <label for="dob">Date of Birth (DD/MM/YYYY)</label>
 	                                <input type="text" name="dob" id="dob" class="form-control" required>
 	                            </div>
 								<div class="form-group">
