--- a/public/html/confirm_booking.html
+++ b/public/html/confirm_booking.html
@@ -145,7 +145,9 @@
                                 //get element from db
                                 var refNeeded = firebase.database().ref(`instructor/${instr}/date/${oldunixTimeStamp}/${ele}`);
                                 // edit availability status
-                                    refNeeded.update({name:"Booked"})
+                                    refNeeded.update({name:"Upcoming Lesson"})
+                                    refNeeded.update({type:"event"})
+                                    refNeeded.update({color:"#ff9665"})
                                     }
                             window.location.href = "confirmation.html";
                     }
