--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -47,6 +47,7 @@
   .form{
     width:100px;
   }
+ 
     </style>
 </head>
 
@@ -135,7 +136,7 @@
                                             <div class="detail">
                                                 <p class="detail-subtitle">Date for Next Lesson</p>
                                                 <br/>
-                                                <span class="number" id="nextlesson"></span>
+                                                <span class="number" id="nextlesson" style="font-size:18px"></span>
                                             </div>
                                         </div>
                                     </div>
