--- a/public/html/telegramhelp.html
+++ b/public/html/telegramhelp.html
@@ -35,10 +35,10 @@
                 <b>Step 2</b>  Click on Start Bot to start the Telegram Bot!
                 <br>
                 <br>
-                <b>Step 3</b>  Register your email by sending /command1 email (replace email with your email address)
+                <b>Step 3</b>  Register your email by sending /email (replace this with your email address)
                 <br>
                 <br>
-                <b>Step 4</b>  Get details of your next lesson by sending /command2 anytexthere
+                <b>Step 4</b>  Get details of your next lesson by sending /getnextlesson or get details of all lesson by sending /alllessons
               </div>
 
 
