--- a/public/html/navbar.html
+++ b/public/html/navbar.html
@@ -41,7 +41,7 @@
       if(mode===null){
         var path = window.location.pathname;
         var page = path.split("/").pop();
-        if(page=="index.html"){
+        if(page=="index.html" || page=="course-list.html" || page =="course-detail.html"){
           
          
         }
