updates to titles

--- a/public/html/footer.html
+++ b/public/html/footer.html
@@ -78,7 +78,7 @@
 					<div class="wrap-link-footer p-t-28">
 						<ul class="col-left">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="course-list.html">Instructors</a></li>
+							<li><a href="instructor-list.html">Instructors</a></li>
 						
 						</ul>
 
