--- a/public/html/navbar.html
+++ b/public/html/navbar.html
@@ -20,7 +20,7 @@
         <nav>
           <ul class="nav-ul hide-ul">
             <li><a class="nav-link" href="index.html">Home</a></li>
-            <li><a class="nav-link" href="course-list.html">Instructor</a></li>
+            <li><a class="nav-link" href="instructor-list.html">Instructor</a></li>
             <li><a class="nav-link " href="forum.html">Forum</a></li>
             <li id="drop" class="nav-link respon-sub-menu">
               <a id="change" href="login.html">Login</a>
@@ -41,7 +41,7 @@
       if(mode===null){
         var path = window.location.pathname;
         var page = path.split("/").pop();
-        if(page=="index.html" || page=="course-list.html" || page =="course-detail.html"){
+        if(page=="index.html" || page=="instructor-list.html" || page =="instructor-detail.html"){
           
          
         }
