--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
 					    data-height="['auto']">
 					    	<div class="p-l-10 p-r-10 p-t-5 p-b-5">
 					    		<!-- Button -->
-					    		<a href="course-list.html" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
+					    		<a href="instructor-list.html" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
 					    			Book Now
 					    			<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
 					    		</a>
@@ -141,7 +141,7 @@
 					    data-height="['auto']">
 						<div class="p-l-10 p-r-10 p-t-5 p-b-5">
 							<!-- Button -->
-							<a href="course-list.html" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
+							<a href="instructor-list.html" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
 								Book Now
 								<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
 							</a>
@@ -188,7 +188,7 @@
 					    data-height="['auto']">
 						<div class="p-l-10 p-r-10 p-t-5 p-b-5">
 							<!-- Button -->
-							<a href="course-list.html" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
+							<a href="instructor-list.html" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
 								Book Now
 								<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
 							</a>
@@ -506,8 +506,8 @@
 
 			<div class="flex-c-m p-t-46">
 				<!-- Button -->
-				<a href="course-list.html" class="btn-drive m-txt1 size5 bg2 hov-color-white bo-rad-4">
-					View All Course
+				<a href="instructor-list.html" class="btn-drive m-txt1 size5 bg2 hov-color-white bo-rad-4">
+					View All instructor
 					<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
 				</a>
 			</div>
