--- a/public/html/confirm_booking.html
+++ b/public/html/confirm_booking.html
@@ -25,7 +25,7 @@
             <i class="fa fa-home"></i>
             Home / 
             </a>
-            <a href="course-list.html" class="s-txt19 hov-color-main trans-02">
+            <a href="instructor-list.html" class="s-txt19 hov-color-main trans-02">
                 <i class="fa fa-users"></i>
                 Instructors /
             </a>
