--- a/public/html/index.html
+++ b/public/html/index.html
@@ -507,7 +507,7 @@
 			<div class="flex-c-m p-t-46">
 				<!-- Button -->
 				<a href="instructor-list.html" class="btn-drive m-txt1 size5 bg2 hov-color-white bo-rad-4">
-					View All Course
+					View All Instructor
 					<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
 				</a>
 			</div>
