--- a/public/index.html
+++ b/public/index.html
@@ -10,37 +10,37 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="images/icons/favicon.png"/>
+	<link rel="icon" type="image/png" href="../images/icons/favicon.png"/>
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/elegant-font/html-css/style.css">
+	<link rel="stylesheet" type="text/css" href="../fonts/elegant-font/html-css/style.css">
 <!--===============================================================================================-->	
-	<link rel="stylesheet" type="text/css" href="vendor/revolution/css/layers.css">
-	<link rel="stylesheet" type="text/css" href="vendor/revolution/css/navigation.css">
-	<link rel="stylesheet" type="text/css" href="vendor/revolution/css/settings.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/revolution/css/layers.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/revolution/css/navigation.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/revolution/css/settings.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/css-hamburgers/hamburgers.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/slick/slick.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/slick/slick.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/animate/animate.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/lightbox2/css/lightbox.min.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/lightbox2/css/lightbox.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animsition/dist/css/animsition.min.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/animsition/dist/css/animsition.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/color.css">
-	<!-- <link rel="stylesheet" type="text/css" href="css/all_icons_min.css"> -->
+	<link rel="stylesheet" type="text/css" href="../css/util.css">
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="../css/color.css">
+	<!-- <link rel="stylesheet" type="text/css" href="../css/all_icons_min.css"> -->
 <!--===============================================================================================-->
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
-<script type="module" src="js/index2.js"></script>
+<script type="module" src="../js/index2.js"></script>
 
 
 <body class="animsition restyle-index">
@@ -57,7 +57,7 @@
 				<ul>
 					<!-- Slide 1 -->
 					<li data-transition="fade">
-						<img src="images/shutter1.jpg" alt="IMG-SLIDE" class="rev-slidebg">
+						<img src="../images/shutter1.jpg" alt="IMG-SLIDE" class="rev-slidebg">
 
 						<h2 class="tp-caption tp-resizeme txt1 txt-center p-l-15 p-r-15" 
 						data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"x:left;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
@@ -105,7 +105,7 @@
 
 					<!-- Slide 2 -->
 					<li data-transition="fade">
-						<img src="images/shutter2.jpg" alt="IMG-SLIDE" class="rev-slidebg">
+						<img src="../images/shutter2.jpg" alt="IMG-SLIDE" class="rev-slidebg">
 
 						<h2 class="tp-caption tp-resizeme txt1 txt-center p-l-15 p-r-15" 
 						data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"y:top;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
@@ -152,7 +152,7 @@
 
 					<!-- Slide 3 -->
 					<li data-transition="fade">
-						<img src="images/carousel1.jpg" alt="IMG-SLIDE" class="rev-slidebg">
+						<img src="../images/carousel1.jpg" alt="IMG-SLIDE" class="rev-slidebg">
 						
 						<h2 class="tp-caption tp-resizeme txt1 txt-center p-l-15 p-r-15" 
 						data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"x:-500px;skX:85px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
@@ -210,7 +210,7 @@
 					<!-- Block 1 -->
 					<div class="block-1">
 						<div class="wrap-pic-b1 wrap-pic-w">
-							<img src="images/shutter2.jpg" alt="IMG-FEATURE">
+							<img src="../images/shutter2.jpg" alt="IMG-FEATURE">
 						</div>
 
 						<div class="wrap-text-b1 bg-main op-09 trans-05 ">
@@ -239,7 +239,7 @@
 					<!-- Block 1 -->
 					<div class="block-1">
 						<div class="wrap-pic-b1 wrap-pic-w">
-							<img src="images/shutter4.jpg" alt="IMG-FEATURE">
+							<img src="../images/shutter4.jpg" alt="IMG-FEATURE">
 						</div>
 
 						<div class="wrap-text-b1 bg-main op-09 trans-05">
@@ -268,7 +268,7 @@
 					<!-- Block 1 -->
 					<div class="block-1">
 						<div class="wrap-pic-b1 wrap-pic-w">
-							<img src="images/shutter3.jpg" alt="IMG-FEATURE">
+							<img src="../images/shutter3.jpg" alt="IMG-FEATURE">
 						</div>
 
 						<div class="wrap-text-b1 bg-main op-09 trans-05">
@@ -398,7 +398,7 @@
 
 	<!-- Testimonial -->
 	<section class="testimonial">
-		<div class="wrap-testimonial parallax100 bg-overlay-3 p-t-75 p-b-80" style="background-image: url('images/carousel1.jpg');">
+		<div class="wrap-testimonial parallax100 bg-overlay-3 p-t-75 p-b-80" style="background-image: url('../images/carousel1.jpg');">
 			<div class="wrap-slide-slick-1">
 				<div class="p-b-40">
 					<h3 class="m-txt6 txt-center p-b-8 respon1">
@@ -416,7 +416,7 @@
 
 						<div class="wrap-person m-lr-auto flex-c-m animated">
 							<div class="wrap-pic-person">
-								<img src="images/student1.jpg" alt="IMG-PERSON">
+								<img src="../images/student1.jpg" alt="IMG-PERSON">
 							</div>
 
 							<div class="wrap-info-person p-l-20">
@@ -433,7 +433,7 @@
 
 						<div class="wrap-person m-lr-auto flex-c-m animated">
 							<div class="wrap-pic-person">
-								<img src="images/student2.jpg" alt="IMG-PERSON">
+								<img src="../images/student2.jpg" alt="IMG-PERSON">
 							</div>
 
 							<div class="wrap-info-person p-l-20">
@@ -450,7 +450,7 @@
 
 						<div class="wrap-person m-lr-auto flex-c-m animated">
 							<div class="wrap-pic-person">
-								<img src="images/student3.jpg" alt="IMG-PERSON">
+								<img src="../images/student3.jpg" alt="IMG-PERSON">
 							</div>
 
 							<div class="wrap-info-person p-l-20">
@@ -467,7 +467,7 @@
 
 						<div class="wrap-person m-lr-auto flex-c-m animated">
 							<div class="wrap-pic-person">
-								<img src="images/student4.jpg" alt="IMG-PERSON">
+								<img src="../images/student4.jpg" alt="IMG-PERSON">
 							</div>
 
 							<div class="wrap-info-person p-l-20">
@@ -507,7 +507,7 @@
 			<div class="flex-c-m p-t-46">
 				<!-- Button -->
 				<a href="instructor-list.html" class="btn-drive m-txt1 size5 bg2 hov-color-white bo-rad-4">
-					View All instructor
+					View All Instructor
 					<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
 				</a>
 			</div>
@@ -524,36 +524,36 @@
 
 	
 <!--===============================================================================================-->	
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="../vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/wow/wow.min.js"></script>
+	<script src="../vendor/wow/wow.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/animsition/dist/js/animsition.min.js"></script>
+	<script src="../vendor/animsition/dist/js/animsition.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/slick/slick.min.js"></script>
-	<script src="js/slick-custom.js"></script>
+	<script src="../vendor/slick/slick.min.js"></script>
+	<script src="../js/slick-custom.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.min.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../vendor/bootstrap/js/popper.min.js"></script>
+	<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->	
-	<script src="vendor/revolution/js/jquery.themepunch.tools.min.js"></script>
-	<script src="vendor/revolution/js/jquery.themepunch.revolution.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.video.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.actions.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.migration.min.js"></script>
-	<script src="vendor/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
-	<script src="js/slide-custom.js"></script>
+	<script src="../vendor/revolution/js/jquery.themepunch.tools.min.js"></script>
+	<script src="../vendor/revolution/js/jquery.themepunch.revolution.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.video.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.actions.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.migration.min.js"></script>
+	<script src="../vendor/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
+	<script src="../js/slide-custom.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/lightbox2/js/lightbox.min.js"></script>
+	<script src="../vendor/lightbox2/js/lightbox.min.js"></script>
 <!--===============================================================================================-->
 
 <!--===============================================================================================-->
-	<script src="js/main.js"></script>
+	<script src="../js/main.js"></script>
 	
     
     <script>
