--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 				<ul>
 					<!-- Slide 1 -->
 					<li data-transition="fade">
-						<img src="../images/shutter1.jpg" alt="IMG-SLIDE" class="rev-slidebg">
+						<img src="images/shutter1.jpg" alt="IMG-SLIDE" class="rev-slidebg">
 
 						<h2 class="tp-caption tp-resizeme txt1 txt-center p-l-15 p-r-15" 
 						data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"x:left;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
@@ -152,7 +152,7 @@
 
 					<!-- Slide 3 -->
 					<li data-transition="fade">
-						<img src="../images/carousel1.jpg" alt="IMG-SLIDE" class="rev-slidebg">
+						<img src="images/carousel1.jpg" alt="IMG-SLIDE" class="rev-slidebg">
 						
 						<h2 class="tp-caption tp-resizeme txt1 txt-center p-l-15 p-r-15" 
 						data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"x:-500px;skX:85px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
@@ -210,7 +210,7 @@
 					<!-- Block 1 -->
 					<div class="block-1">
 						<div class="wrap-pic-b1 wrap-pic-w">
-							<img src="../images/shutter2.jpg" alt="IMG-FEATURE">
+							<img src="images/shutter2.jpg" alt="IMG-FEATURE">
 						</div>
 
 						<div class="wrap-text-b1 bg-main op-09 trans-05 ">
@@ -239,7 +239,7 @@
 					<!-- Block 1 -->
 					<div class="block-1">
 						<div class="wrap-pic-b1 wrap-pic-w">
-							<img src="../images/shutter4.jpg" alt="IMG-FEATURE">
+							<img src="images/shutter4.jpg" alt="IMG-FEATURE">
 						</div>
 
 						<div class="wrap-text-b1 bg-main op-09 trans-05">
@@ -268,7 +268,7 @@
 					<!-- Block 1 -->
 					<div class="block-1">
 						<div class="wrap-pic-b1 wrap-pic-w">
-							<img src="../images/shutter3.jpg" alt="IMG-FEATURE">
+							<img src="images/shutter3.jpg" alt="IMG-FEATURE">
 						</div>
 
 						<div class="wrap-text-b1 bg-main op-09 trans-05">
@@ -398,7 +398,7 @@
 
 	<!-- Testimonial -->
 	<section class="testimonial">
-		<div class="wrap-testimonial parallax100 bg-overlay-3 p-t-75 p-b-80" style="background-image: url('../images/carousel1.jpg');">
+		<div class="wrap-testimonial parallax100 bg-overlay-3 p-t-75 p-b-80" style="background-image: url('images/carousel1.jpg');">
 			<div class="wrap-slide-slick-1">
 				<div class="p-b-40">
 					<h3 class="m-txt6 txt-center p-b-8 respon1">
@@ -416,7 +416,7 @@
 
 						<div class="wrap-person m-lr-auto flex-c-m animated">
 							<div class="wrap-pic-person">
-								<img src="../images/student1.jpg" alt="IMG-PERSON">
+								<img src="images/student1.jpg" alt="IMG-PERSON">
 							</div>
 
 							<div class="wrap-info-person p-l-20">
@@ -433,7 +433,7 @@
 
 						<div class="wrap-person m-lr-auto flex-c-m animated">
 							<div class="wrap-pic-person">
-								<img src="../images/student2.jpg" alt="IMG-PERSON">
+								<img src="images/student2.jpg" alt="IMG-PERSON">
 							</div>
 
 							<div class="wrap-info-person p-l-20">
@@ -450,7 +450,7 @@
 
 						<div class="wrap-person m-lr-auto flex-c-m animated">
 							<div class="wrap-pic-person">
-								<img src="../images/student3.jpg" alt="IMG-PERSON">
+								<img src="images/student3.jpg" alt="IMG-PERSON">
 							</div>
 
 							<div class="wrap-info-person p-l-20">
@@ -467,7 +467,7 @@
 
 						<div class="wrap-person m-lr-auto flex-c-m animated">
 							<div class="wrap-pic-person">
-								<img src="../images/student4.jpg" alt="IMG-PERSON">
+								<img src="images/student4.jpg" alt="IMG-PERSON">
 							</div>
 
 							<div class="wrap-info-person p-l-20">
