--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>My Dashboard</title>
-    <link href="../Profile Page/assets/vendor/fontawesome/css/fontawesome.min.css" rel="stylesheet">
-    <link href="../Profile Page/assets/vendor/fontawesome/css/solid.min.css" rel="stylesheet">
-    <link href="../Profile Page/assets/vendor/fontawesome/css/brands.min.css" rel="stylesheet">
-    <link href="../Profile Page/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../Profile Page/assets/css/master.css" rel="stylesheet">
-    <link href="../Profile Page/assets/vendor/flagiconcss/css/flag-icon.min.css" rel="stylesheet">
+    <link href="Profile Page/assets/vendor/fontawesome/css/fontawesome.min.css" rel="stylesheet">
+    <link href="Profile Page/assets/vendor/fontawesome/css/solid.min.css" rel="stylesheet">
+    <link href="Profile Page/assets/vendor/fontawesome/css/brands.min.css" rel="stylesheet">
+    <link href="Profile Page/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="Profile Page/assets/css/master.css" rel="stylesheet">
+    <link href="Profile Page/assets/vendor/flagiconcss/css/flag-icon.min.css" rel="stylesheet">
 
     <script type="text/javascript" src="https://gothere.sg/jsapi?sensor=false"> </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -21,7 +21,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script> 
-    <script src="../js/insertuser.js"></script>
+    <script src="js/insertuser.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   
@@ -345,7 +345,7 @@
 
     .catch((error) => {
         // Unable to retrieve url1. Display error
-        console.log(error)
+   
     });
     
 
@@ -398,8 +398,8 @@ function k2f(K) {
  
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
  
-    <script src="../Profile Page/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="../Profile Page/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="Profile Page/assets/vendor/jquery/jquery.min.js"></script>
+    <script src="Profile Page/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
